# advent-of-code-2020

./: Cargo.toml  README.md  fetch.sh
.github/workflows/: main.yml
aoc-runner/: Cargo.toml
aoc-runner/src/: lib.rs  output.rs
aoc2020/: Cargo.toml
aoc2020/src/: main.rs  prelude.rs
aoc2020/src/day/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
common/: Cargo.toml
common/src/: arena.rs  box_arena.rs  console.rs  either.rs  iter.rs  lib.rs  num.rs  owning_ref.rs  parse.rs  smallvec.rs  tuple.rs  utils.rs  vec_arena.rs
