[package]
name = "aoc-runner"
version = "0.1.0"
authors = ["Todd Matheson <tmatheson11186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.8"
futures = "0.3.9"
anyhow = "1.0.38"
thiserror = "1.0.23"
itertools = "0.10.0"
colored = "2.0.0"

num-iter = "0.1.42"
num-traits = "0.2.14"
num-integer = "0.1.44"
num-derive = "0.3.3"
