[package]
name = "common"
version = "0.1.0"
authors = ["Todd Matheson <tmatheson11186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
# bench = false

[dependencies]
anyhow = "1.0.37"
num-iter = "0.1.42"
num-traits = "0.2.14"
num-integer = "0.1.44"
num-derive = "0.3.3"
itertools = "0.10.0"
scan_fmt = "0.2.5"
stable_deref_trait = "1.2.0"
fnv = "1.0.7"
rayon = "1.5.0"
bitvec = "0.20.1"
memchr = "2.3"

[dev-dependencies]
bincode = "1.3.1"
quickcheck = "0.9"
rand = "0.8"
